# fftw-sk

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md
fftw-sk/: Cargo.toml
fftw-sk-src/: Cargo.toml
fftw-sk-sys/: Cargo.toml  bindgen.sh  wrapper.h
fftw-sk-sys/src/: fftw.rs  lib.rs
fftw-sk/src/: array.rs  error.rs  lib.rs  plan.rs  types.rs
fftw-sk/tests/: r2c.rs
